assets/css/style.css
/* ... */
.knowledgemotion-logo { background-position: -1860px 0px; }
.musicbrainz-logo { background-position: -1953px 0px; }
.opta-logo { background-position: -2046px 0px; }
.pagesuite-logo { background-position: -2139px 0px; }
.press-association-logo { background-position: -2232px 0px; }
.radio-times-logo { background-position: -2325px 0px; }
.radioplayer-logo { background-position: -2418px 0px; }
.rightster-logo { background-position: -2511px 0px; }
.rte-logo { background-position: -2604px 0px; }
.soundcloud-logo { background-position: -2697px 0px; }
.spotify-logo { background-position: -2790px 0px; }
.talktalk-logo { background-position: -2883px 0px; }
.the-space-logo { background-position: -2976px 0px; }
.the-sun-logo { background-position: -3069px 0px; }
.tv-choice-logo { background-position: -3162px 0px; }
.twitter-logo { background-position: -3255px 0px; }
.uktv-logo { background-position: -3348px 0px; }
.vimeo-logo { background-position: -3441px 0px; }
.wikipedia-logo { background-position: -3534px 0px; }
.xbox-logo { background-position: -3627px 0px; }
.youtube-logo { background-position: -3720px 0px; }
.youview-logo { background-position: -3813px 0px; }

/* EPG widget */
.epg-widget {
    height: 430px;
}

.widget-holder {
    margin: 10px !important;
}

/* API explorer */
.jsonOutput {
    overflow: auto;
    height: 300px;
    text-transform: none;
}

input.queryUrl {
    width: 92%;
}

.ajaxLoading {
    width: 100% !important;
    height: 100% !important;
    background: url("../images/loader.gif") center center no-repeat;
}

.tbl tbody td.annotations-row {
    padding-bottom: 10px;
}

.annotations-row label {
    width: 25%;
    font-size: 14px;
    line-height: 1;
}

.channel-picker-row label {
    width: auto;
    float: none;
    font-size: 14px;
    line-height: 1.5;
}

.channel-picker-row h4 {
    margin-bottom: 10px;
}

.platform-picker,
.region-picker {
    margin-bottom: 10px;
}

.channels-container h4 {
    padding-left: 1%;
}

.popular-channels {
    position: relative;
    float: left;
    width: 74%;
    margin: 0 0 0 1%;
}

.popular-channels label {
    float: left;
    width: 33.33%;
    margin: 0;
}

.popular-channels label,
.channels-container label {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.channel-picker-toggle,
.toggle-picker {
    display: block;
}

.pickers {
    position: relative;
    float: left;
    width: 23%;
    margin: 0 1%;
}

.popular-channels .close-channel-picker {
    position: absolute;
    top: 0;
    right: 0;
}

.id-added {
    position: absolute;
    top: 0;
    left: 100%;
    width: 20px;
    height: 20px;
    line-height: 20px;
    text-align: center;
    margin: 0 5px;
    padding: 3px;
    background: #ef308f;
    color: #fff;
    border-radius: 50%;
}

.pickers select {
    width: 100%;
}

.channels-container label {
    float: left;
    width: 23%;
    margin: 0 1%;
}

.channels-by-region {
    float: left;
    width: 23%;
    margin: 0 1%;
}

.toggle-link {
    color: #ef308f;
}

.tt-dropdown-menu {
    background: #fff;
}

.tt-suggestion {
    padding: 5px;
}

.tt-suggestion p {
    margin: 0;
}

.tt-suggestion.tt-cursor {
    background: #380b66;
    color: #ef308f;
}

.twitter-typeahead,
.tt-hint,
.channel-search-box {
    width: 100% !important;
}

.tt-dropdown-menu {
    width: 100%;
    -webkit-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
       -moz-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
            box-shadow: 0 5px 10px rgba(0,0,0,0.2);
}

.close-channel-picker {
    text-align: right;
}

.dummy h4 {
    color: #999;
}

.dummy input {
    box-sizing: border-box;
    opacity: 0.5;
    height: auto;
}


/* NowNextLater widget */
/* Panel styles */
.widget-panel {
  overflow: hidden;
}

.widget-programme-image {
  display: block;
}

.widget-programme-info {
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  display: block;
  padding: 10px;
  background: rgb(51,0,102);
  background: rgba(51,0,102, 0.75);
  color: rgb(255,255,255);
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
}

.widget-programme-info a {
  color: rgb(255,0,154);
  text-decoration: none;
}

.widget-programme-info-inner {
  margin: 0 0 10px;
}

.widget-programme-details {
  float: left;
  width: 74%;
}

.widget-programme-start-time {
  margin-bottom: 3px;
  color: rgb(255,0,154);
  margin-left: 0;
}

.widget-programme-title {
  font-size: 18px;
  line-height: 1.1;
  padding-bottom: 3px;
  font-weight: bold;
}

.widget-programme-start-time,
.widget-programme-title {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.widget-channel-logo {
  float: right;
  width: auto;
  height: 43px;
}

/* Carousel specific styles */
#carousel-widget-container {
  position: relative;
  width: 459px;
  height: 258px;
}

.fullscreen-button {
  position: absolute;
  top: 10px;
  right: 10px;
  z-index: 1250;
}

.carousel {
  position: relative;
  width: 459px;
  height: 258px;
}

.carousel .widget-panel {
  position: absolute;
  top: 0;
  left: 0;
  width: 459px;
  height: 258px;
}

.carousel .widget-programme-image {
  width: 459px;
  height: 258px;
}

.carousel .widget-programme-info {
  bottom: -42px;
}

.carousel .widget-panel:hover .widget-programme-info {
  bottom: 0;
}

.carousel .widget-api-call a {
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding: 5px;
  background: rgb(255,255,255);
  border-radius: 5px;
}

/* Fullscreen specific styles */
.fullscreen-container .widget-panel-container {
  position: relative;
  float: left;
  width: 33.33%;
}

.fullscreen-container .widget-image-container {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;
}

.fullscreen-container .widget-programme-image {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.fullscreen-container .widget-panel {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
/* ... */

